--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -32,117 +32,123 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     <div class="panel panel-default">
-<div class="col-md-6">
-    <table class="table table-striped">
-        @Html.HiddenFor(model => model.BedrijfID)
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Naam)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Naam)
-                @Html.ValidationMessageFor(model => model.Naam)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Actief)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Actief)
-                @Html.ValidationMessageFor(model => model.Actief)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.NonActiefReden)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.NonActiefReden)
-                @Html.ValidationMessageFor(model => model.NonActiefReden)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.KvKNummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.KvKNummer)
-                @Html.ValidationMessageFor(model => model.KvKNummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Plaats)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Plaats)
-                @Html.ValidationMessageFor(model => model.Plaats)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Straatnaam)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Straatnaam)
-                @Html.ValidationMessageFor(model => model.Straatnaam)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Huisnummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Huisnummer)
-                @Html.ValidationMessageFor(model => model.Huisnummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Toevoeging)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Toevoeging)
-                @Html.ValidationMessageFor(model => model.Toevoeging)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Postcode)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Postcode)
-                @Html.ValidationMessageFor(model => model.Postcode)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Telefoonnummer)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Telefoonnummer)
-                @Html.ValidationMessageFor(model => model.Telefoonnummer)
-            </td>
-        </tr>
-        <tr>
-            <td class="editor-label">
-                @Html.LabelFor(model => model.Email)
-            </td>
-            <td class="editor-field">
-                @Html.EditorFor(model => model.Email)
-                @Html.ValidationMessageFor(model => model.Email)
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
-            </td>
-        </tr>
+        <div class="panel-heading">
+            <h3>Bewerken</h3>
+        </div>
+        <div class="panel-body">
 
-</table>
-    </div>
-    </div>
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    @Html.HiddenFor(model => model.BedrijfID)
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Naam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Naam)
+                            @Html.ValidationMessageFor(model => model.Naam)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Actief)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Actief)
+                            @Html.ValidationMessageFor(model => model.Actief)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.NonActiefReden)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.NonActiefReden)
+                            @Html.ValidationMessageFor(model => model.NonActiefReden)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.KvKNummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.KvKNummer)
+                            @Html.ValidationMessageFor(model => model.KvKNummer)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Plaats)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Plaats)
+                            @Html.ValidationMessageFor(model => model.Plaats)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Straatnaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Straatnaam)
+                            @Html.ValidationMessageFor(model => model.Straatnaam)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Huisnummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Huisnummer)
+                            @Html.ValidationMessageFor(model => model.Huisnummer)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Toevoeging)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Toevoeging)
+                            @Html.ValidationMessageFor(model => model.Toevoeging)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Postcode)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Postcode)
+                            @Html.ValidationMessageFor(model => model.Postcode)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Telefoonnummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Telefoonnummer)
+                            @Html.ValidationMessageFor(model => model.Telefoonnummer)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Email)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Email)
+                            @Html.ValidationMessageFor(model => model.Email)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
+                        </td>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
+            </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
