--- a/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
@@ -10,18 +10,14 @@
     }
     <li>@Html.ActionLink("Terug", "Index")</li>
 }
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3>Koppeling details</h3>
-    </div>
-    <div class="panel-body">
-        <div class="col-md-3">
-            <table class="table table-striped">
-                <tr>
-                    <th colspan="2">
-                        <h4>Stagiair</h4>
-                    </th>
-                </tr>
+<div class="col-sm-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Student details</h3>
+        </div>
+        <div class="panel-body">
+            <div class="col-md-12">
+                <table class="table table-striped">
                     <tr>
                         <td class="display-label">
                             @Html.DisplayNameFor(model => model.Persoonsgegevens.Voornaam):
@@ -32,89 +28,111 @@
                     </tr>
                     <tr>
 
-            <td class="display-label">
-                @Html.DisplayNameFor(model => model.Persoonsgegevens.Achternaam):
-            </td>
-            <td class="display-field">
-                @Html.DisplayFor(model => model.Persoonsgegevens.Achternaam)
-            </td>
-        </table>
+                        <td class="display-label">
+                            @Html.DisplayNameFor(model => model.Persoonsgegevens.Achternaam):
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Persoonsgegevens.Achternaam)
+                        </td>
+                </table>
+            </div>
+        </div>
     </div>
-        <div class="col-md-3">
-            <table class="table table-striped">
-                <tr>
-                    <th colspan="2">
-                        <h4>Docent</h4>
-                    </th>
-                </tr>
-                <tr>
-                    <td class="display-label">
-                        @Html.DisplayNameFor(model => model.Persoonsgegevens1.Voornaam):
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Persoonsgegevens1.Voornaam)
-                    </td>
-                </tr>
-                <tr>
+</div>
+<div class="col-sm-3">
 
-                    <td class="display-label">
-                        @Html.DisplayNameFor(model => model.Persoonsgegevens1.Achternaam):
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Persoonsgegevens1.Achternaam)
-                    </td>
-            </table>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Docent details</h3>
         </div>
-        <div class="col-md-3">
-            <table class="table table-striped">
-                <tr>
-                    <th colspan="2">
-                        <h4>Begeleider</h4>
-                    </th>
-                </tr>
-                <tr>
-                    <td class="display-label">
-                        @Html.DisplayNameFor(model => model.Persoonsgegevens2.Voornaam):
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Persoonsgegevens2.Voornaam)
-                    </td>
-                </tr>
-                <tr>
+        <div class="panel-body">
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    <tr>
+                        <td class="display-label">
+                            @Html.DisplayNameFor(model => model.Persoonsgegevens1.Voornaam):
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Persoonsgegevens1.Voornaam)
+                        </td>
+                    </tr>
+                    <tr>
 
-                    <td class="display-label">
-                        @Html.DisplayNameFor(model => model.Persoonsgegevens2.Achternaam):
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Persoonsgegevens2.Achternaam)
-                    </td>
-            </table>
+                        <td class="display-label">
+                            @Html.DisplayNameFor(model => model.Persoonsgegevens1.Achternaam):
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Persoonsgegevens1.Achternaam)
+                        </td>
+                </table>
+            </div>
         </div>
-        <div class="col-md-3">
-            <table class="table table-striped">
-                <tr>
-                    <th colspan="2">
-                        <h4>Begeleider</h4>
-                    </th>
-                </tr>
-                <tr>
-                    <td class="display-label">
-                        Begindatum:
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Periode.Begindatum)
-                    </td>
-                </tr>
-                <tr>
+    </div>
+</div>
 
-                    <td class="display-label">
-                        Einddatum:
-                    </td>
-                    <td class="display-field">
-                        @Html.DisplayFor(model => model.Periode.Einddatum)
-                    </td>
-            </table>
+<div class="col-sm-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Begeleider details</h3>
         </div>
+        <div class="panel-body">
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    <tr>
+                        <td class="display-label">
+                            @Html.DisplayNameFor(model => model.Persoonsgegevens2.Voornaam):
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Persoonsgegevens2.Voornaam)
+                        </td>
+                    </tr>
+                    <tr>
+
+                        <td class="display-label">
+                            @Html.DisplayNameFor(model => model.Persoonsgegevens2.Achternaam):
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Persoonsgegevens2.Achternaam)
+                        </td>
+                </table>
+            </div>
         </div>
+    </div>
+</div>
+
+
+
+<div class="col-sm-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Periode details</h3>
+        </div>
+        <div class="panel-body">
+            <div class="col-md-12">
+
+                <table class="table table-striped">
+
+                    <tr>
+                        <td class="display-label">
+                            Begindatum:
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Periode.Begindatum)
+                        </td>
+                    </tr>
+                    <tr>
+
+                        <td class="display-label">
+                            Einddatum:
+                        </td>
+                        <td class="display-field">
+                            @Html.DisplayFor(model => model.Periode.Einddatum)
+                        </td>
+                </table>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 
